# codex-acp

./: Cargo.toml  flake.nix
src/: main.rs
src/agent/: commands.rs  config_builder.rs  core.rs  events.rs  prompt.rs  session_manager.rs  utils.rs
src/fs/: bridge.rs  mcp_server.rs
