[package]
name = "codex-acp"
authors = ["angao<gawaine2111@gmail.com>"]
version = "0.4.2"
edition = "2024"
description = "ACP-compatible agent that bridges the OpenAI Codex runtime with ACP clients over stdio."
readme = "README.md"
# Match the pinned toolchain in rust-toolchain.toml
rust-version = "1.91"

[dependencies]
agent-client-protocol = { version = "0.9.2", features = ["unstable"] }
anyhow = { version = "1" }
async-trait = { version = "0.1" }
codex-app-server-protocol = { git = "https://github.com/openai/codex", branch = "main" }
codex-common = { git = "https://github.com/openai/codex", branch = "main", features = [
  "cli",
] }
codex-core = { git = "https://github.com/openai/codex", branch = "main" }
codex-protocol = { git = "https://github.com/openai/codex", branch = "main" }
codex-utils-absolute-path = { git = "https://github.com/openai/codex", branch = "main" }
diffy = { version = "0.4.2" }
rmcp = { version = "0.12.0", features = [
  "macros",
  "schemars",
  "server",
  "transport-io",
] }
schemars = { version = "1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
tokio = { version = "1.48.0", features = [
  "io-std",
  "io-util",
  "macros",
  "net",
  "rt",
  "sync",
] }
tokio-util = { version = "0.7.17", features = ["compat"] }
tracing = { version = "0.1", features = ["log"] }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
